# dotfiles

./: .gitignore  .gitmodules  README.md  tlp  tmux_readme.org
alacritty/.config/alacritty/: alacritty.yml
drivers/huion/: 52-tablet.conf  digimend-dkms_9_all.deb  wacom_settings.sh
emacs/.emacs.d/: custom_variables.el  init.el
emacs/.emacs.d/nullc0d3r/: comint-extras.el  infer-indentation.el  navigation.el  pizzazz.el
gpu/: README.md
gpu/gpu_switcheroo/: .dir-locals.el  .gitignore  Cargo.toml  README.md  build.rs
gpu/gpu_switcheroo/src/: config.rs
install_dep/: arc_install.py  rtags_install.py  wacom_preferences.sh
mangohud/.config/MangoHud/: MangoHud.conf
nix/.config/environment.d/: 10-nix-xdg-update.conf
nu/.config/nushell/: config.nu  env.nu  theme.omp.json
profile/: .profile
ptpython/.config/ptpython/: autoload.py
tmux/: .tmux.conf
vnc/: install_files.sh  x0vnc.sh  x0vncserver.service  x11vnc_server.service  x11vnc_startup.sh
zsh/: .zshrc
zsh/.zsh_functions/: _flamegraph
