[package]
name = "gpu_switcheroo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "gpu_switcheroo"

[dependencies]
directories = "4.0"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"