[package]
name = "gpu_switcheroo"
version = "0.1.0"
edition = "2021"
authors = ["ishbosamiya"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "gpu_switcheroo"

[dependencies]
directories = "4.0"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
clap = { version = "3.1", features = ["derive"] }
# since this wouldn't work for windows anyway, no point in adding
# "sudo" as a dependency only for unix
sudo = "0.6"